# demsup

./: .Renviron  .gitignore  CFTC 2016-2026 CL.xlsx  Dockerfile  README.md  diag_bars.R  diag_bars2.R  diag_compare.R  diag_consensus.R  diag_consensus_test.R  diag_factors.R  diag_ff_test.R  diag_injection.R  diag_models.R  diag_models2.R  diag_scrape_test.R  diag_spread_dates.R  diag_surprise_dist.R  diag_te_calendar.R  diag_te_deep.R  diag_te_parse.R  diag_te_test.R  generate_report.py  ignal_engine.R Rregime_classifier.R Rregime_models.R Rintraday_signal_engine.R  plumber.R  pyproject.toml  run_consensus_oos_test.R  validate_reader.R  validate_reader.py
R/: atr_fly_analysis.R  build_cftc_panel.R  build_intraday_csvs.R  build_lco_curve.R  cftc_advanced_models.R  cftc_analysis.R  cftc_cl_pipeline.R  cftc_diagnostics.R  cftc_yahoo_ms.R  extend_curve.R  factor_loader.R  factor_loader_consensus.R  factor_loader_extended.R  fair_value_model.R  fix_m2fly_backtest.R  futures_reader.R  intraday_signal_engine.R  intraday_signal_engine_v2.R  intraday_signal_engine_v3.R  inventory_shock_model.R  lco_backtest.R  live_eia_test.R  live_feed.R  model_comparison.R  model_diagnostics.R  optimise_weights.R  phase2_build.R  phase2_models.R  phase3c_strategy.R  plot_all_products.R  plot_comparison.R  predict_eia.R  regime_classifier.R  regime_models.R  regime_models_treated.R  regime_perf_tables.R  signal_engine.R  spread_factor_model.R  structural_breaks.R  validate_live_feed.R  (+1 more)
backtesting/: bars_15min_20260612.db  bars_15min_20260623.db
dashboard/: Dockerfile  app.R
(+142 files in other folders)
