[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demsup"
version = "0.1.0"
description = "Demand-supply regime engine for energy markets"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "numpy",
    "scipy",
    "scikit-learn",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]